--- a/src/Components/Banner/style.css
+++ b/src/Components/Banner/style.css
@@ -1,288 +1,155 @@
 .banner_wrapper {
-  height: 85vh;
+  height: 100vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   position: relative;
 }
-
+.banner_wrapper .scroll_tag {
+  position: absolute;
+  bottom: 80px;
+  left: -50px;
+  transform: rotate(90deg);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-transform: uppercase;
+  height: 50px;
+  width: 220px;
+  z-index: 200;
+}
+.banner_wrapper .scroll_tag span {
+  height: 0.0520833333vh;
+  width: 150px;
+  background: #14181B;
+  display: block;
+  margin-left: 10px;
+}
 .banner_wrapper .banner_container {
   width: 80%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   position: relative;
   z-index: 2000;
 }
-
 .banner_wrapper .banner_container .left {
   width: 90%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-
 .banner_wrapper .banner_container .left .title_container {
   width: 100%;
   text-align: left;
 }
-
 .banner_wrapper .banner_container .left .title_container .title {
-  font-size: 8rem;
+  font-size: 6vw;
   line-height: 8rem;
   margin-bottom: 30px;
   font-weight: 600;
   letter-spacing: -10px;
 }
-
-.banner_wrapper .banner_container .left .title_container .description {
-  width: 50%;
+.banner_wrapper .banner_container .left .title_container .title span {
+  font-weight: 400;
 }
-
+.banner_wrapper .banner_container .left .title_container .description {
+  width: 70%;
+}
 .banner_wrapper .banner_container .left .title_container .button_cotainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   border-radius: 0;
   margin-top: 30px;
   width: 520px;
+  display: none;
 }
-
 .banner_wrapper .banner_container .left .title_container .button_cotainer button {
   margin: 0;
 }
-
 .banner_wrapper .banner_container .left .title_container .button_cotainer button:first-child {
   margin-right: 5px;
 }
-
 .banner_wrapper .banner_container .left .title_container .button_cotainer button:last-child {
   background: none;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  color: #000;
+  color: #14181B;
 }
-
 .banner_wrapper .banner_container .right {
   width: 50%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .banner_wrapper .banner_container .right .boxes_wrapper {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
-
 .banner_wrapper .banner_container .right .boxes_wrapper .box {
   width: 50%;
 }
-
 .banner_wrapper .banner_container .right .boxes_wrapper .box .number {
   font-weight: 600;
   font-size: 3rem;
 }
-
-.banner_wrapper .overlay {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.377)), to(#000)), url(../../Assets/img/malha2.png);
-  background-image: linear-gradient(rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.377), #000 100%), url(../../Assets/img/malha2.png);
-  position: absolute;
-  z-index: 20;
-  height: 85vh;
-  width: 100%;
-  display: none;
-}
-
-.banner_wrapper .video {
-  position: absolute;
-  height: 100vh;
-  width: 100%;
-  background-size: contain;
-  -webkit-transition: 1s opacity;
-  transition: 1s opacity;
-  left: 0;
-  top: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  z-index: 10;
-}
-
-@-webkit-keyframes toSlide {
-  0% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+@media (min-width: 0px) and (max-width: 600px) {
+  .banner_wrapper {
+    min-height: 80vh;
+    height: auto;
+    padding-bottom: 50px;
+    padding-top: 100px;
   }
-  100% {
-    -webkit-transform: translateX(100px);
-            transform: translateX(100px);
+  .banner_wrapper .scroll_tag {
+    display: none;
   }
-}
-
-@keyframes toSlide {
-  0% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+  .banner_wrapper .banner_container {
+    width: 90%;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
   }
-  100% {
-    -webkit-transform: translateX(100px);
-            transform: translateX(100px);
+  .banner_wrapper .banner_container .left {
+    width: 100%;
+    height: auto;
+    min-height: 40%;
+    flex-direction: column;
+    margin-bottom: 50px;
   }
-}
-
-@-webkit-keyframes scale {
-  0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+  .banner_wrapper .banner_container .left .title_container {
+    width: 100%;
+    text-align: left;
   }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+  .banner_wrapper .banner_container .left .title_container .title {
+    font-size: 3rem;
+    line-height: 3rem;
+    margin-bottom: 30px;
+    letter-spacing: normal;
   }
-}
-
-@keyframes scale {
-  0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+  .banner_wrapper .banner_container .left .title_container .description {
+    width: 100%;
   }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+  .banner_wrapper .banner_container .right {
+    width: 100%;
+    height: 30%;
   }
-}
-
-@-webkit-keyframes myAnim {
-  0%,
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+  .banner_wrapper .banner_container .right .boxes_wrapper {
+    flex-wrap: wrap;
+    text-align: center;
   }
-  10%,
-  30%,
-  50%,
-  70% {
-    -webkit-transform: translateX(-10px);
-            transform: translateX(-10px);
+  .banner_wrapper .banner_container .right .boxes_wrapper .box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(0, 0, 0, 0.062745098);
   }
-  20%,
-  40%,
-  60% {
-    -webkit-transform: translateX(10px);
-            transform: translateX(10px);
-  }
-  80% {
-    -webkit-transform: translateX(8px);
-            transform: translateX(8px);
-  }
-  90% {
-    -webkit-transform: translateX(-8px);
-            transform: translateX(-8px);
-  }
-}
-
-@keyframes myAnim {
-  0%,
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  10%,
-  30%,
-  50%,
-  70% {
-    -webkit-transform: translateX(-10px);
-            transform: translateX(-10px);
-  }
-  20%,
-  40%,
-  60% {
-    -webkit-transform: translateX(10px);
-            transform: translateX(10px);
-  }
-  80% {
-    -webkit-transform: translateX(8px);
-            transform: translateX(8px);
-  }
-  90% {
-    -webkit-transform: translateX(-8px);
-            transform: translateX(-8px);
-  }
-}
-
-@-webkit-keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
