--- a/src/Components/Button/style.css
+++ b/src/Components/Button/style.css
@@ -9,7 +9,5 @@
   margin-top: 60px;
   white-space: nowrap;
   cursor: pointer;
-  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
