--- a/src/Pages/Blog/style.scss
+++ b/src/Pages/Blog/style.scss
@@ -42,6 +42,10 @@
         }
         .resume{
           font-size: 12px;
+
+          .article_text{
+            font-size: 10px;
+          }
         }
         .info_article_bottom {
           display: flex;
