--- a/src/variables/_variables.scss
+++ b/src/variables/_variables.scss
@@ -6,11 +6,11 @@ $textColor: #000;
 $textColorbutton: #fff;
 $color:#000;
 $box:#111;
-$bannerHeight:85vh;
+$bannerHeight:100vh;
 $borderColor:rgba(0, 0, 0, 0.2);
 $borderColorActive:rgb(0, 0, 0);
 $borderRadius:0;
 $boxbg:#1A1F24;
-$fontTitleSize:8rem;
+$fontTitleSize:6vw;
 $letterSpacing:-10px;
 $lineHeight:8rem;
