--- a/src/Components/EmptyBlog/style.css
+++ b/src/Components/EmptyBlog/style.css
@@ -1,20 +1,12 @@
 .empty_blog_wrapper {
-  height: 100%;
+  height: 70vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .empty_blog_wrapper .empty_text_container {
   text-transform: uppercase;
   letter-spacing: 3px;
   font-size: 12px;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
