--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -1,89 +1,180 @@
 .footer_wrapper {
   height: auto;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-family: "Poppins", sans-serif;
-  background: #000;
-  color: #fff;
-  height: 40vh;
-}
-
-.footer_wrapper .footer_container {
   width: 80%;
-  border-top: 0.05208vw solid rgba(0, 0, 0, 0.2);
-  height: 90px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  background: #F8F8F8;
+  color: #14181B;
+  min-height: 85vh;
+  margin: 0 auto;
+}
+.footer_wrapper .title_footer_page {
+  font-size: 6vw;
+  letter-spacing: -10px;
+  margin-bottom: 150px;
+  text-align: center;
+  width: 100%;
+}
+.footer_wrapper .title_footer_page span {
+  font-weight: 600;
+  margin-left: 10px;
+}
+.footer_wrapper .footer_container {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
   font-size: 14px;
 }
-
 .footer_wrapper .footer_container .box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: nowrap;
   white-space: nowrap;
-  text-transform: uppercase;
-  width: 25%;
+  width: 60%;
+  font-weight: 500;
 }
-
-.footer_wrapper .footer_container .box .title_category_footer {
-  font-weight: bold;
+.footer_wrapper .footer_container .box:first-child {
+  width: 40%;
 }
-
-.footer_wrapper .footer_container .box .item_footer {
-  line-height: 20px;
-}
-
-.footer_wrapper .footer_container .box .rights_reserved {
-  font-size: 10px;
-}
-
-.footer_wrapper .footer_container .box .logo_sub {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.footer_wrapper .footer_container .box:last-child {
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 35px;
-  position: relative;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 60%;
+}
+.footer_wrapper .footer_container .box:last-child .info_second_box {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.footer_wrapper .footer_container .box:last-child .info_second_box .item_footer {
+  text-transform: capitalize;
+  font-size: 1.5vw;
+  width: 25%;
+  margin: 10px 0;
+  text-align: left;
+}
+.footer_wrapper .footer_container .box .info_container_footer {
+  text-align: left;
+  margin-bottom: 20px;
+}
+.footer_wrapper .footer_container .box .title_footer_default {
+  font-size: 1.15vw;
+  opacity: 0.4;
+  margin-bottom: 20px;
+}
+.footer_wrapper .footer_container .box .info {
+  font-size: 1.5vw;
+}
+.footer_wrapper .footer_container .box .info span {
+  opacity: 0.4;
 }
 
-.footer_wrapper .footer_container .box .logo_sub .box_logo {
-  background: #fff;
+.sub_footer {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+  padding: 0 10%;
 }
 
-.footer_wrapper .footer_container .box .logo_sub .name_logo {
-  color: #fff;
-}
-/*# sourceMappingURL=style.css.map */
+@media (min-width: 0px) and (max-width: 600px) {
+  .footer_wrapper {
+    height: auto;
+    width: 90%;
+    min-height: 50vh;
+  }
+  .footer_wrapper .title_footer_page {
+    font-size: 50px;
+    letter-spacing: normal;
+    margin-bottom: 30px;
+    text-align: left;
+    width: 100%;
+  }
+  .footer_wrapper .title_footer_page span {
+    font-weight: 600;
+    margin-left: 10px;
+  }
+  .footer_wrapper .footer_container {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    font-size: 14px;
+  }
+  .footer_wrapper .footer_container .box {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    width: 100%;
+    font-weight: 500;
+  }
+  .footer_wrapper .footer_container .box:first-child {
+    width: 100%;
+  }
+  .footer_wrapper .footer_container .box:last-child {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 60%;
+  }
+  .footer_wrapper .footer_container .box:last-child .info_second_box {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .footer_wrapper .footer_container .box:last-child .info_second_box .item_footer {
+    text-transform: capitalize;
+    font-size: 20px;
+    width: 25%;
+    margin: 10px 0;
+    text-align: left;
+  }
+  .footer_wrapper .footer_container .box .info_container_footer {
+    text-align: left;
+    margin-bottom: 20px;
+  }
+  .footer_wrapper .footer_container .box .title_footer_default {
+    font-size: 20px;
+    opacity: 0.4;
+    margin-bottom: 20px;
+  }
+  .footer_wrapper .footer_container .box .info {
+    font-size: 20px;
+  }
+  .footer_wrapper .footer_container .box .info span {
+    opacity: 0.4;
+  }
+  .sub_footer {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
+    padding: 0 5%;
+    text-align: left;
+  }
+}/*# sourceMappingURL=style.css.map */
