--- a/src/Components/Footer/style.scss
+++ b/src/Components/Footer/style.scss
@@ -1,59 +1,188 @@
 @import "../../variables/variables";
 .footer_wrapper {
   height: auto;
-  width: 100%;
+  width: 80%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+  flex-direction: column;
   font-family: "Poppins", sans-serif;
-  background: #000;
-  color: #fff;
-  height: 40vh;
+  background: $bg;
+  color: $bgc;
+  min-height: 85vh;
+  margin: 0 auto;
+
+  .title_footer_page {
+    font-size: $fontTitleSize;
+    letter-spacing: $letterSpacing;
+    margin-bottom: 150px;
+    text-align: center;
+    width: 100%;
+    span {
+      font-weight: 600;
+      margin-left: 10px;
+    }
+  }
   .footer_container {
-    width: 80%;
-    border-top: 0.05208vw solid rgba(0, 0, 0, 0.2);
-    height: 90px;
+    width: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     font-size: 14px;
     .box {
       display: flex;
       align-items: flex-start;
-      justify-content: flex-start;
+      justify-content: space-between;
       flex-direction: column;
       flex-wrap: nowrap;
       white-space: nowrap;
-      text-transform: uppercase;
-      width: 25%;
-      .title_category_footer{
+      width: 60%;
+      font-weight: 500;
 
-        font-weight: bold;
-
+      &:first-child {
+        width: 40%;
       }
-
-      .item_footer{
-        line-height: 20px;
-
-      }
-      .rights_reserved{
-        font-size: 10px;
-      }
-      .logo_sub {
+      &:last-child {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 35px;
-        position: relative;
-  
-        .box_logo{
-          background: #fff;
-          
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 60%;
+        .info_second_box {
+          display: flex;
+          align-items: flex-start;
+          justify-content: space-between;
+          flex-direction: row;
+          flex-wrap: wrap;
+          width: 100%;
+          .item_footer {
+            text-transform: capitalize;
+            font-size: 1.5vw;
+            width: 25%;
+            margin: 10px 0;
+            text-align: left;
+          }
         }
-       .name_logo{
-        color: #fff;
+      }
+
+      .info_container_footer {
+        text-align: left;
+        margin-bottom: 20px;
+      }
+      .title_footer_default {
+        font-size: 1.15vw;
+        opacity: 0.4;
+        margin-bottom: 20px;
+
+      }
+      .info {
+        font-size: 1.5vw;
+        span {
+          opacity: 0.4;
         }
       }
     }
+  }
+}
+.sub_footer {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+  padding: 0 10%;
+}
+
+@media (min-width: 0px) and (max-width: 600px) {
+  .footer_wrapper {
+    height: auto;
+    width: 90%;
+    min-height: 50vh;
+  
+    .title_footer_page {
+      font-size: 50px;
+      letter-spacing: normal;
+      margin-bottom: 30px;
+      text-align: left;
+      width: 100%;
+      span {
+        font-weight: 600;
+        margin-left: 10px;
+      }
+    }
+    .footer_container {
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      font-size: 14px;
+      .box {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        white-space: nowrap;
+        width: 100%;
+        font-weight: 500;
+  
+        &:first-child {
+          width: 100%;
+        }
+        &:last-child {
+          display: flex;
+          align-items: flex-start;
+          justify-content: space-between;
+          flex-direction: row;
+          flex-wrap: wrap;
+          width: 60%;
+          .info_second_box {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            flex-direction: column;
+            flex-wrap: wrap;
+            width: 100%;
+            .item_footer {
+              text-transform: capitalize;
+              font-size: 20px;
+              width: 25%;
+              margin: 10px 0;
+              text-align: left;
+            }
+          }
+        }
+  
+        .info_container_footer {
+          text-align: left;
+          margin-bottom: 20px;
+        }
+        .title_footer_default {
+          font-size: 20px;
+          opacity: 0.4;
+          margin-bottom: 20px;
+  
+        }
+        .info {
+          font-size: 20px;
+          span {
+            opacity: 0.4;
+          }
+        }
+      }
+    }
+  }
+  .sub_footer {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
+    padding: 0 5%;
+    text-align: left;
   }
 }
