--- a/src/Components/Price/style.scss
+++ b/src/Components/Price/style.scss
@@ -172,3 +172,118 @@
     }
   }
 }
+
+@media (min-width: 0px) and (max-width: 600px) {
+  .pri_wrapper {
+    width: 100%;
+    min-height: 100vh;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding:0 0 0;
+    .title_price_page{
+      font-size: 50px;
+      font-weight: 800;
+      line-height: 1;
+      text-transform: capitalize;
+      text-align: center;
+      width:40% ;
+      margin-bottom: 20px;
+    }
+    .sub_title_price {
+      width: 75%;
+      margin-bottom: 100px;
+      text-align: center;
+      font-size: 20px;
+      opacity: 0.7;
+      line-height: 1.35;
+      font-weight: 300;
+      span{
+        width: 50%;
+        display: block;
+        margin: 0 auto;
+      }
+    }
+    .pri_container {
+      width: 90%;
+      height: 100%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+  
+      .right {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        .pricing-details {
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-wrap: wrap;
+          width: 100%;
+          .single-pricing {
+            width: 100%;
+  
+            .top_pricing {
+              min-height: 100px;
+              height: auto;
+              margin: 30px 0;
+  
+              .title {
+                font-size: 25px;
+                line-height: normal;
+                text-align: left;
+                font-weight: 600;
+                letter-spacing: normal;
+              }
+              .type {
+                font-size:4vw;
+                line-height: normal;
+                text-align: left;
+                margin: 0.5208333333vw 0 0;
+              }
+  
+              .price {
+                font-size: 20px;
+                line-height: 4.1666666667vw;
+                text-align: left;
+                margin: 2.0833333333vw 0 0;
+                letter-spacing: normal;
+                font-weight: 600;
+                span {
+                  font-size:3vw;
+                }
+              }
+            }
+  
+            .feature-list {
+              margin-bottom: 0;
+              padding-left: 0;
+              list-style-type: none;
+              text-align: left;
+              li {
+                  height: 50px;
+                  margin-bottom: 1.0416666667vw;
+                  padding-bottom: 1.0416666667vw;
+                  padding-left: 0.5208333333vw;
+                  padding-right: 0.5208333333vw;
+                  border-bottom: 0.0520833333vw solid $borderColor;
+                  font-size: 14px;
+                  &:hover{
+                    border-bottom: 1px solid $borderColorActive;
+                  }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  
+
+}
