--- a/src/Components/Sobre/style.css
+++ b/src/Components/Sobre/style.css
@@ -2,103 +2,41 @@
   min-height: 50vh;
   height: auto;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 0 0 150px;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 0;
 }
-
 .sobre_wrapper .sobre_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: 80%;
   height: 100%;
 }
-
 .sobre_wrapper .sobre_container .right {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-left: calc(90rem / 24);
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 3.75rem;
 }
-
-.sobre_wrapper .sobre_container .right .title_services_top {
-  width: 85%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 80%;
-  margin-bottom: 30px;
-}
-
-.sobre_wrapper .sobre_container .right .title_services_top .container_left {
-  width: 50px;
-  height: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-right: 15px;
-}
-
-.sobre_wrapper .sobre_container .right .title_services_top .container_left .box {
-  width: 50px;
-  height: 50px;
-}
-
 .sobre_wrapper .sobre_container .right .title_container {
   width: 100%;
 }
-
 .sobre_wrapper .sobre_container .right .title_container .text {
   font-weight: 600;
   margin-bottom: 30px;
-  color: #000;
-  font-size: 8rem;
+  font-size: 6vw;
   letter-spacing: -10px;
   line-height: 8rem;
 }
-
+.sobre_wrapper .sobre_container .right .title_container .text span {
+  font-weight: 400;
+}
 .sobre_wrapper .sobre_container .right .description {
   font-size: 0.9vw;
   line-height: 1.2vw;
@@ -110,139 +48,50 @@
 
 @media (min-width: 0px) and (max-width: 600px) {
   .sobre_wrapper {
-    min-height: 60vh;
+    min-height: 50vh;
     height: auto;
     width: 100%;
-    border-top: 1px solid #444;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-  }
-  .sobre_wrapper .left {
-    width: 100%;
-    min-height: 100%;
-    height: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    border-right: none;
-  }
-  .sobre_wrapper .left .box_sobre {
-    width: 100%;
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .sobre_wrapper .left .box_sobre .box_into {
-    height: 100%;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
     padding: 50px 0;
   }
-  .sobre_wrapper .left .box_sobre .box_into:hover {
-    background: #ffffff0a;
-  }
-  .sobre_wrapper .left .box_sobre .box_into .content {
-    width: 70%;
-    min-height: 100%;
-    height: auto;
-    text-align: left;
-    display: -webkit-box;
-    display: -ms-flexbox;
+  .sobre_wrapper .sobre_container {
     display: flex;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 90%;
+    height: 100%;
   }
-  .sobre_wrapper .left .box_sobre .box_into .content img {
-    width: 50px;
-    margin-bottom: 20px;
-  }
-  .sobre_wrapper .left .box_sobre .box_into .content i {
-    font-size: 35px;
-    margin-bottom: 20px;
-  }
-  .sobre_wrapper .left .box_sobre .box_into .content .title {
-    font-size: 3.5vw;
-    margin-bottom: 20px;
-  }
-  .sobre_wrapper .left .box_sobre .box_into .content .text {
-    font-size: 3vw;
-  }
-  .sobre_wrapper .left .box_sobre .box_into:first-child {
-    border-right: 1px solid #444;
-  }
-  .sobre_wrapper .left .box_sobre:first-child {
-    border-bottom: 1px solid #444;
-  }
-  .sobre_wrapper .right {
+  .sobre_wrapper .sobre_container .right {
     width: 100%;
-    min-height: 100%;
-    height: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    height: 100%;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-    padding: 50px 0;
-    border-bottom: 1px solid #444;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 0;
   }
-  .sobre_wrapper .right .title_container {
-    width: 80%;
-    font-size: 4vw;
+  .sobre_wrapper .sobre_container .right .title_container {
+    width: 100%;
   }
-  .sobre_wrapper .right .title_container .text {
+  .sobre_wrapper .sobre_container .right .title_container .text {
+    font-weight: 600;
+    margin-bottom: 30px;
+    font-size: 50px;
+    letter-spacing: normal;
+    line-height: 50px;
+  }
+  .sobre_wrapper .sobre_container .right .description {
+    font-size: 14px;
+    line-height: normal;
     font-weight: 300;
+    width: 100%;
+    text-align: justify;
   }
-  .sobre_wrapper .right .title_container .description {
-    font-size: 3vw;
-    font-weight: 300;
+  .sobre_wrapper .sobre_container .right button {
+    margin-top: 30px;
+    width: 100%;
   }
-  .sobre_wrapper .right .title_container button {
-    margin-top: 20px;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
