--- a/src/Components/Sobre/style.scss
+++ b/src/Components/Sobre/style.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 0 150px;
+  padding: 50px 0;
   .sobre_container {
     display: flex;
     align-items: center;
@@ -22,27 +22,26 @@
       justify-content: center;
       flex-direction: column;
       padding-left: calc(90rem / 24);
-      // padding-right:calc(90rem / 24);
-      .title_services_top {
-        width: 85%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 80%;
-        margin-bottom: 30px;
-        .container_left {
-          width: 50px;
-          height: 50px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin-right: 15px;
-          .box {
-            width: 50px;
-            height: 50px;
-          }
-        }
-      }
+      // .title_services_top {
+      //   width: 85%;
+      //   display: flex;
+      //   align-items: center;
+      //   justify-content: center;
+      //   width: 80%;
+      //   margin-bottom: 30px;
+      //   .container_left {
+      //     width: 50px;
+      //     height: 50px;
+      //     display: flex;
+      //     align-items: center;
+      //     justify-content: center;
+      //     margin-right: 15px;
+      //     .box {
+      //       width: 50px;
+      //       height: 50px;
+      //     }
+      //   }
+      // }
 
       .title_container {
         width: 100%;
@@ -50,10 +49,12 @@
         .text {
           font-weight: 600;
           margin-bottom: 30px;
-          color: $textColor;
           font-size: $fontTitleSize;
           letter-spacing: $letterSpacing;
           line-height: $lineHeight;
+          span{
+            font-weight: 400;
+          }
         }
       }
       .description {
@@ -70,98 +71,51 @@
 
 @media (min-width: 0px) and (max-width: 600px) {
   .sobre_wrapper {
-    min-height: 60vh;
+    min-height: 50vh;
     height: auto;
     width: 100%;
-    border-top: 1px solid #444;
-
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column-reverse;
-    .left {
-      width: 100%;
-      min-height: 100%;
-      height: auto;
+    padding: 50px 0;
+    .sobre_container {
       display: flex;
       align-items: center;
       justify-content: center;
-      border-right: none;
-
-      .box_sobre {
+      flex-direction: column;
+      width: 90%;
+      height: 100%;
+      .right {
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-
-        .box_into {
-          height: 100%;
+        flex-direction: column;
+        padding-left: 0;
+  
+        .title_container {
           width: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          padding: 50px 0;
-          &:hover {
-            background: #ffffff0a;
+  
+          .text {
+            font-weight: 600;
+            margin-bottom: 30px;
+            font-size: 50px;
+            letter-spacing: normal;
+            line-height: 50px;
           }
-          .content {
-            width: 70%;
-            min-height: 100%;
-            height: auto;
-            text-align: left;
-            display: flex;
-            align-items: flex-start;
-            justify-content: center;
-            flex-direction: column;
-            img {
-              width: 50px;
-              margin-bottom: 20px;
-            }
-            i {
-              font-size: 35px;
-              margin-bottom: 20px;
-            }
-            .title {
-              font-size: 3.5vw;
-              margin-bottom: 20px;
-            }
-            .text {
-              font-size: 3vw;
-            }
-          }
-          &:first-child {
-            border-right: 1px solid #444;
-          }
-        }
-
-        &:first-child {
-          border-bottom: 1px solid #444;
-        }
-      }
-    }
-    .right {
-      width: 100%;
-      min-height: 100%;
-      height: auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 50px 0;
-      border-bottom: 1px solid #444;
-      .title_container {
-        width: 80%;
-        font-size: 4vw;
-        .text {
-          font-weight: 300;
         }
         .description {
-          font-size: 3vw;
+          font-size: 14px;
+          line-height: normal;
           font-weight: 300;
+          width: 100%;
+          text-align: justify;
+
         }
-        button {
-          margin-top: 20px;
+        button{
+          margin-top:30px;
+          width: 100%;
         }
       }
     }
