--- a/src/Components/Works/style.css
+++ b/src/Components/Works/style.css
@@ -1,56 +1,31 @@
 .works_wrapper {
   width: 100%;
   height: auto;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  min-height: 70vh;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   background: #14181B;
   color: #F8F8F8;
-  padding: 150px 0;
+  padding: 50px 0;
 }
-
 .works_wrapper .works_container {
   width: 88%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   position: relative;
 }
-
 .works_wrapper .works_container img {
   width: 80%;
   position: relative;
 }
-
 .works_wrapper .works_container .works_boxes_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .works_wrapper .works_container .works_boxes_container .works_boxes {
   width: 400px;
   margin-right: 20px;
@@ -62,26 +37,12 @@
   border: 1px solid #1d2429;
   cursor: pointer;
 }
-
 .works_wrapper .works_container .works_boxes_container .works_boxes .opacity {
   opacity: 1;
 }
-
-.works_wrapper .works_container .works_boxes_container .works_boxes:hover .opacity {
-  opacity: .5;
-  position: absolute;
-  height: 100%;
-  top: 0;
-  width: calc(100%);
-  border-radius: 20px;
-  z-index: 20;
+.works_wrapper .works_container .works_boxes_container .works_boxes:hover {
+  border: 1px solid #344049;
 }
-
-.works_wrapper .works_container .works_boxes_container .works_boxes:hover .opacity:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(#0e1214));
-  background: linear-gradient(rgba(0, 0, 0, 0), #0e1214);
-}
-
 .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper {
   position: absolute;
   bottom: 100px;
@@ -89,34 +50,106 @@
   height: auto;
   min-height: 20px;
   text-align: left;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   left: 50%;
-  -webkit-filter: brightness(1) !important;
-          filter: brightness(1) !important;
+  filter: brightness(1) !important;
   z-index: 30;
 }
-
 .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .type {
   font-size: 0.7vw;
   line-height: 0.8333333333vw;
 }
-
 .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .title {
   font-size: 1.25vw;
   line-height: 1.25vw;
   margin: 2.0833333333vw 0 0;
   font-weight: 600;
 }
-
 .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .client {
   font-size: 0.8333333333vw;
   line-height: 0.8333333333vw;
   margin: 2.6041666667vw 0 0;
 }
-
 .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .link-icon {
   position: relative;
   top: 30px;
 }
-/*# sourceMappingURL=style.css.map */
+@media (min-width: 0px) and (max-width: 600px) {
+  .works_wrapper {
+    width: 100%;
+    height: auto;
+    min-height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #14181B;
+    color: #F8F8F8;
+    padding: 50px 0;
+    display: none;
+  }
+  .works_wrapper .works_container {
+    width: 88%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+  }
+  .works_wrapper .works_container img {
+    width: 80%;
+    position: relative;
+  }
+  .works_wrapper .works_container .works_boxes_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes {
+    width: 400px;
+    margin-right: 20px;
+    height: 600px;
+    border-radius: 20px;
+    position: relative;
+    color: #F8F8F8;
+    background: #14181B;
+    border: 1px solid #1d2429;
+    cursor: pointer;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes .opacity {
+    opacity: 1;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes:hover {
+    border: 1px solid #344049;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper {
+    position: absolute;
+    bottom: 100px;
+    width: 50%;
+    height: auto;
+    min-height: 20px;
+    text-align: left;
+    transform: translateX(-50%);
+    left: 50%;
+    filter: brightness(1) !important;
+    z-index: 30;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .type {
+    font-size: 0.7vw;
+    line-height: 0.8333333333vw;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .title {
+    font-size: 1.25vw;
+    line-height: 1.25vw;
+    margin: 2.0833333333vw 0 0;
+    font-weight: 600;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .client {
+    font-size: 0.8333333333vw;
+    line-height: 0.8333333333vw;
+    margin: 2.6041666667vw 0 0;
+  }
+  .works_wrapper .works_container .works_boxes_container .works_boxes .desc-wrapper .link-icon {
+    position: relative;
+    top: 30px;
+  }
+}/*# sourceMappingURL=style.css.map */
